@@ -67,7 +67,7 @@ enum {NONESRCCODE=0,CPPSRCCODE=0x100,CSRCCODE=0x200,BASHSRCCODE=0x300,PYTHONSRCC
 
 enum {HIDETABSHORTCUT=0,DELETELINESHORTCUT,DELETETOEOLSHORTCUT,DELETETOSOLSHORTCUT,SELECTWORDSHORTCUT,DELETEWORDSHORTCUT,DUPLICATELINESHORTCUT,SELECTLINESHORTCUT,MOVELINEUPSHORTCUT,MOVELINEDOWNSHORTCUT,MOVESELECTIONUPSHORTCUT,MOVESELECTIONDOWNSHORTCUT,NOMORESHORTCUT};
 
-enum {FRCASE=0,FRUSEREGEX,FRWRAP,FRALLFILES,FRHIGHLIGHTALL,FRREPLACEALL,FRSEARCHBACK,FRMAXSWITCHES};
+enum {FRCASE=0,FRUSEREGEX,FRREPLACEFIND,FRWRAP,FRALLFILES,FRHIGHLIGHTALL,FRREPLACEALL,FRSEARCHBACK,FRMAXSWITCHES};
 
 #include "QT_AboutBox.h"
 #include "QT_menuitem.h"
@@ -295,6 +295,7 @@ class KKEditClass : public QObject
 		bool							findInAllFiles=false;
 		bool							hightlightAll=true;
 		bool							searchBack=false;
+		bool							findAfterReplace=false;
 		int							currentPage=0;
 		bool							closingAllTabs=false;
 		unsigned int					autoShowMinChars=6;
